# cpu-and-platform

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-single-platform.yml
cmake/: BuildFailureTest.cmake  TestBuildFailure.cmake
cpu/: CMakeLists.txt
cpu/src/: Core.cpp  Core.ixx  Cpu.ixx  Instruction.ixx  InterruptId.ixx  Opcode.ixx  RegisterId.ixx  State.ixx  Status.ixx
cpu/test/: CMakeLists.txt  test_core.cpp  test_instruction.cpp  test_register_id.cpp
kbza/: Address.ixx  CMakeLists.txt  Core.cpp  Core.ixx  Instruction.ixx  Kbza.ixx  MemoryController.ixx  Opcode.ixx  RegisterId.ixx  Status.ixx  Utils.ixx
kbza/tests/: CMakeLists.txt  test_address.cpp  test_address_bf.cpp  test_core.cpp  test_instruction.cpp  test_memory_controller.cpp  test_register_id.cpp
platform/: CMakeLists.txt
platform/src/: Address.ixx  MemoryController.ixx  Platform.ixx
platform/test/: CMakeLists.txt  build_address.cpp  test_address.cpp  test_memory_controller.cpp
utils/: CMakeLists.txt
utils/src/: Address.ixx  Alignment.ixx  Numbers.ixx  Utils.ixx
utils/test/: CMakeLists.txt  build_address.cpp  test_address.cpp  test_align.cpp  test_is_aligned.cpp  test_is_power_of_two.cpp
